--- a/frontend/components/Fridge/FridgeIngredientsForm.module.scss
+++ b/frontend/components/Fridge/FridgeIngredientsForm.module.scss
@@ -1,3 +1,7 @@
+.form {
+  margin: 0 var(--body-side-margin);
+}
+
 .legend {
   margin-top: 50rem;
   margin-bottom: 38rem;
